move /images to /assets/images , etc.

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -17,10 +17,10 @@
 
     <!-- Le fav and touch icons -->
 
-    <link rel="shortcut icon" href="/images/Galaxy.ico">
-    <link rel="apple-touch-icon" href="/images/Galaxy64.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/Galaxy72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/Galaxy114.png">
+    <link rel="shortcut icon" href="/assets/images/Galaxy.ico">
+    <link rel="apple-touch-icon" href="/assets/images/Galaxy64.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/Galaxy72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/images/Galaxy114.png">
 
   </head>
 
@@ -46,7 +46,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 
+        <p>&copy; <a href="/pages/about.html">{{ site.author.name }}</a> 2012 
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
