modified for twitter.js:   _includes/themes/twitter/post.html 	modified:   _posts/2013-08-22-annoying-boy-and-crashed-figma-and-then.md

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -28,6 +28,9 @@
   {% endunless %}  
 
     <hr>
+
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
     <div class="pagination">
       <ul>
       {% if page.previous %}
