modified:   _layouts/default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ theme :
   name : bootstrap-3
 ---
 {% include JB/setup %}
-{% include themes/twitter/default.html %}
+{% include themes/bootstrap-3/default.html %}
 
 <script type="text/javascript"
 src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
